added cursor pointer to finish and back button in app.css

--- a/dev-challenge/src/App.css
+++ b/dev-challenge/src/App.css
@@ -40,6 +40,7 @@ h1 {
   font-size: 14pt;
   border-color:rgb(215, 212, 212);
   margin-top: 60px;
+  cursor: pointer;
 }
 
 .finishButton {
@@ -51,5 +52,6 @@ h1 {
   color: white;
   background-color: rgb(0, 0, 0);
   font-size: 14pt;
+  cursor: pointer;
 
 }
